# fs-schema

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mise.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: on_file_change.sh
.codex/: hooks.json
.codex/hooks/: python_hook_lib.py  python_session_start.py  python_stop.py
.github/workflows/: quality.yaml  test.yaml
docs/: draft.md
docs/adr/: 0001_toolset.md  0002_rule_oriented_schema.md  0003_optional_rule_id.md  0004_path_regex.md  0005_reject_trailing_slash_in_path.md  0006_implies_uses_only_path.md  0007_add_count_rule.md  0008_extend_count_select_with_kind.md  0009_add_compile_command.md  README.md
docs/rules/: commit.md  documentation.md
examples/: count.yaml  forbid.yaml  implies.yaml  require.yaml  require_path_regex.yaml
src/fs_schema/: __init__.py  cli.py  compiler.py  fs_dump.py  json_schema.py  schema.py  schema_loader.py  validator.py
src/fs_schema/schema/: fs-schema-dump-entry.schema.yaml  fs-schema.schema.yaml
tests/: test_cli.py  test_compiler.py  test_json_schema.py  test_validate.py
